Fixed small overlap issues

--- a/src/App.css
+++ b/src/App.css
@@ -248,7 +248,7 @@ body::-webkit-scrollbar {
       display: none !important;
     }
     .logo {
-      top: 40% !important;
+      top: 35% !important;
     }
     .makeStyles-buttonArrow-8 {
       z-index: -1 !important;
